# nn4cast

./: LICENCE.txt  README.md  anaconda-project.yml  environment.yml  requirements.txt  setup.cfg  setup.py
nn4cast/: my_libraries.py  predefined_classes_modified.py  predefined_functions.py  predefined_functions_modified.py
src/nn4cast/: predefined_classes.py  predefined_classes_modified.py
