[metadata]
name = nn4cast
version = 1.0.14
author = Victor Galvan Fraile
author_email = vgalvanfraile@gmail.com
description = Python API to process .nc datasets and perform AI methodologies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Victorgf00/nn4cast
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = ==3.9.15

[options.packages.find]
where = src
